add eth66 version code and cleanup
Signed-off-by: Ratan Rai Sur <ratan.r.sur@gmail.com>