@@ -23,6 +23,10 @@ import org.hyperledger.besu.ethereum.p2p.rlpx.wire.SubProtocol;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static java.util.stream.Collectors.toUnmodifiableList;
 
 /**
  * Eth protocol messages as defined in
@@ -34,11 +38,12 @@ public class EthProtocol implements SubProtocol {
   public static final Capability ETH63 = Capability.create(NAME, EthVersion.V63);
   public static final Capability ETH64 = Capability.create(NAME, EthVersion.V64);
   public static final Capability ETH65 = Capability.create(NAME, EthVersion.V65);
+  public static final Capability ETH66 = Capability.create(NAME, EthVersion.V66);
 
   private static final EthProtocol INSTANCE = new EthProtocol();
 
   private static final List<Integer> eth62Messages =
-      Arrays.asList(
+      List.of(
           EthPV62.STATUS,
           EthPV62.NEW_BLOCK_HASHES,
           EthPV62.TRANSACTIONS,
@@ -48,23 +53,23 @@ public class EthProtocol implements SubProtocol {
           EthPV62.BLOCK_BODIES,
           EthPV62.NEW_BLOCK);
 
-  private static final List<Integer> eth63Messages = new ArrayList<>(eth62Messages);
+  private static final List<Integer> eth63Messages =
+      Stream.concat(
+              eth62Messages.stream(),
+              Stream.of(
+                  EthPV63.GET_NODE_DATA, EthPV63.NODE_DATA, EthPV63.GET_RECEIPTS, EthPV63.RECEIPTS))
+          .collect(toUnmodifiableList());
 
-  static {
-    eth63Messages.addAll(
-        Arrays.asList(
-            EthPV63.GET_NODE_DATA, EthPV63.NODE_DATA, EthPV63.GET_RECEIPTS, EthPV63.RECEIPTS));
-  }
+  private static final List<Integer> eth65Messages =
+      Stream.concat(
+              eth62Messages.stream(),
+              Stream.of(
+                  EthPV65.NEW_POOLED_TRANSACTION_HASHES,
+                  EthPV65.GET_POOLED_TRANSACTIONS,
+                  EthPV65.POOLED_TRANSACTIONS))
+          .collect(toUnmodifiableList());
 
-  private static final List<Integer> eth65Messages = new ArrayList<>(eth63Messages);
-
-  static {
-    eth65Messages.addAll(
-        Arrays.asList(
-            EthPV65.NEW_POOLED_TRANSACTION_HASHES,
-            EthPV65.GET_POOLED_TRANSACTIONS,
-            EthPV65.POOLED_TRANSACTIONS));
-  }
+  private static final List<Integer> eth66Messages = eth65Messages;
 
   @Override
   public String getName() {
@@ -79,6 +84,7 @@ public class EthProtocol implements SubProtocol {
       case EthVersion.V63:
       case EthVersion.V64:
       case EthVersion.V65:
+      case EthVersion.V66:
         // same number of messages in each range, eth65 defines messages in the middle of the
         // range defined by eth63 and eth64 defines no new ranges.
         return 17;
@@ -97,6 +103,8 @@ public class EthProtocol implements SubProtocol {
         return eth63Messages.contains(code);
       case EthVersion.V65:
         return eth65Messages.contains(code);
+      case EthVersion.V66:
+        return eth66Messages.contains(code);
       default:
         return false;
     }
@@ -149,5 +157,6 @@ public class EthProtocol implements SubProtocol {
     public static final int V63 = 63;
     public static final int V64 = 64;
     public static final int V65 = 65;
+    public static final int V66 = 66;
   }
 }
